force-app/main/default/objects/Sales_Order__c/fields/Max_Total_price__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_price__c</fullName>
    <label>Max Total price</label>
    <summarizedField>Sales_Order_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line_Item__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>