force-app/main/default/objects/Sales_Order__c/fields/Min_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Total_Price__c</fullName>
    <label>Min Total Price</label>
    <summarizedField>Sales_Order_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line_Item__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>