force-app/main/default/objects/Sales_Order__c/fields/Sum_of_total_price__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_total_price__c</fullName>
    <label>Sum of total price</label>
    <summarizedField>Sales_Order_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line_Item__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>