force-app/main/default/objects/Sales_Order__c/fields/Total_No_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Sale__c</fullName>
    <label>Total No of Sale</label>
    <summaryForeignKey>Sales_Order_Line_Item__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>