force-app/main/default/objects/Sales_Order__c/validationRules/CurrentMonthYear.validationRule-meta.xml
<ValidationRule>
    <fullName>CurrentMonthYear</fullName>
    <active>true</active>
    <errorConditionFormula>And(
  MONTH( Sales_Order_Date__c ) &lt;&gt; MONTH(TODAY()),
  YEAR( Sales_Order_Date__c )  &lt;&gt; YEAR (TODAY())
)</errorConditionFormula>
    <errorDisplayField>Sales_Order_Date__c</errorDisplayField>
    <errorMessage>Date must in the current month.</errorMessage>
</ValidationRule>